Docs model aufgeteilt um circle imports zu verhindern

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -2,20 +2,10 @@
   "include": [],
   "exclude": [
     "**/node_modules",
-    "**/__pycache__",
-    "**/.venv",
+    "**/__pycache__"
   ],
-  "ignore": [
-    "**/.venv/",
-  ],
-  "defineConstant": {
-    "DEBUG": true
-  },
-  "stubPath": "c:/workspace/python/__stubs__/",
-  "venv": ".venv",
+  "stubPath": "~/code/python/__stubs__/stubs/",
   "reportMissingTypeStubs": false,
-  "pythonVersion": "3.10",
-  "pythonPlatform": "Windows",
   "typeCheckingMode": "basic",
   "strictParameterNoneValue": true
 }
