--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ autoflake = "^2.1.1"
 typing-extensions = "^4.5.0"
 isort = "^5.12.0"
 pyflakes = "^3.0.1"
+pylint = "^2.17.4"
 
 [build-system]
 requires = ["poetry-core"]
